# zigfitsio

./: .gitattributes  .gitignore  CAVEATS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  SECURITY.md  build.zig  build.zig.zon  design.md  hatch_build.py  pyproject.toml  requirements.md  tasks.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-wiki.yml  python-wheels.yml  typescript.yml
bindings/c/: zigfitsio.h
bindings/capi/: abi.zig  capi.zig  test_capi.zig
bindings/python/: README.md
bindings/python/ci/: install_zig.sh
bindings/python/examples/: quickstart.py
bindings/python/src/zigfitsio/: __init__.py  _dtypes.py  _loader.py  core.py  header.py  lowlevel.py
bindings/python/tests/: conftest.py  test_api_surface.py  test_astropy_xcheck.py  test_bugfixes.py  test_golden.py  test_highlevel.py  test_lowlevel.py
bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  typedoc.wiki.json  vitest.config.ts
bindings/typescript/examples/: quickstart.ts
bindings/typescript/scripts/: build-native.mjs  build-wasm.mjs  check-versions.mjs  clean-dist.mjs  generate-wiki-docs.mjs  prepack.mjs  prepare-publish.mjs
bindings/typescript/src/: convenience.ts  dtypes.ts  errors.ts  factories.ts  fitsarray.ts  fsbridge.browser.ts  fsbridge.ts  hdu.ts  hdulist.ts  header.ts  index.ts  loader.browser.ts  loader.ts  table.ts  util.ts
bindings/typescript/src/ffi/: bun.ts  index.ts  koffi.ts  types.ts  wasm.ts
bindings/typescript/src/lowlevel/: constants.ts  index.ts  platform.ts  protos.ts  structs.ts
bindings/typescript/tests/: _fixtures.ts  api-surface.test.ts  bugfixes.test.ts  golden.test.ts  header.test.ts  highlevel.test.ts  loader.test.ts  lowlevel.test.ts  ts-api.test.ts
bindings/typescript/tests/_harness/: index.ts
bindings/typescript/tests/interop/: py_interop.py  read_corpus.mjs  write_corpus.mjs
interop/: .gitignore  Makefile  README.md  check_funpack.py  gen_wcs_refpoints.py  normalize_fits.py  requirements.txt  verify_outbound.py  xval.py
interop/c/: gen_sources.c
src/: checksum.zig  convert.zig  diag.zig  endian.zig  errors.zig  filename.zig  fits.zig  group_table.zig  groups.zig  hdu.zig  image.zig  iterator.zig  limits.zig  root.zig  template.zig  validate.zig  version.zig  wasm_check.zig
src/compress/: dither.zig  gzip.zig  hcompress.zig  imgstats.zig  plio.zig  quantize.zig  rice.zig  shuffle.zig  tiled.zig
src/header/: card.zig  continue.zig  header.zig  hierarch.zig  name.zig  value.zig
src/io/: block.zig  device.zig  file.zig  http.zig  memory.zig  stream.zig
src/table/: ascii.zig  binary.zig  common.zig  heap.zig
src/wcs/: celestial.zig  keys.zig  spectral.zig  time.zig
test/: corpus.zig  e2e.zig  golden.zig
test/corpus/: ascii_table.fits  binary_table.fits  binary_table_vla.fits  image_extension.fits  primary_image.fits
test/fuzz/: fuzz.zig
test/golden/: .gitattributes  MANIFEST.json  README.md
test/golden/checksum/: cfitsio_ascii_checksum.fits
test/golden/compress/: tile_gzip.fits  tile_hcompress.fits  tile_hcompress_clip16.fits  tile_hcompress_clip16_expected.fits  tile_hcompress_fdith.fits  tile_hcompress_fdith_expected.fits  tile_hcompress_fq0.fits  tile_hcompress_fq0_expected.fits  tile_hcompress_lossy16.fits  tile_hcompress_lossy16_expected.fits  tile_hcompress_lossy32.fits  tile_hcompress_lossy32_expected.fits  tile_hcompress_smooth.fits  tile_hcompress_smooth_expected.fits  tile_plio.fits  tile_rice.fits  tile_rice_ddith.fits  tile_rice_ddith_expected.fits  tile_rice_fdith.fits  tile_rice_fdith_expected.fits  tile_rice_i16_blank.fits
test/golden/conformance/: expected.json
test/golden/conformance/malformed/: blank_on_float.fits
test/golden/conformance/valid/: image.fits
test/golden/images/: img_f32.fits  img_i16.fits  img_i16_blank.fits  img_i16_blank_scaled.fits
test/golden/tables/: ascii.fits  bintable.fits
test/golden/wcs/: wcs_refpoints.csv  wcs_tan.fits
tools/: bench.zig  emit_fixtures.zig  fitsverify.zig
tools/wiki/: generate.py  publish_bundle.py  release_gate.py  render_python.py  test_generate.py  test_publish_bundle.py  test_release_gate.py  typescript-normalize.mjs  typescript-normalize.test.mjs  zig_api.zig
tools/wiki/tests/: test_render_python.py
