# The shared library is compiled by `hatch_build.py`. It prefers the `ziglang` build package
# when it provides Zig >= 0.16, and otherwise a system `zig` 0.16 on PATH (what CI installs).
# `ziglang` is intentionally NOT a hard build requirement because its PyPI releases can lag the
# 0.16 toolchain this project targets.
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "zigfitsio"
version = "0.1.0"
description = "Python bindings for zigfitsio — a pure-Zig FITS 4.0 I/O library"
readme = "bindings/python/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zigfitsio contributors" }]
keywords = ["FITS", "astronomy", "astrophysics", "io", "zig", "cfitsio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7", "astropy>=5"]

[project.urls]
Repository = "https://github.com/anhydrous99/zigfitsio"

# ── Wheel: ship the src-layout package (remapped to top-level `zigfitsio`) plus the Zig-built
#    shared library injected by hatch_build.py. ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
only-include = ["bindings/python/src/zigfitsio"]
sources = ["bindings/python/src"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# ── Sdist: carry the full Zig project so the wheel can be built from source. ─────────────────
[tool.hatch.build.targets.sdist]
include = [
    "bindings/**",
    "src/**",
    "tools/**",
    "test/**",
    "build.zig",
    "build.zig.zon",
    "hatch_build.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["bindings/python/tests"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_i686 *_i686 pp*"
build-frontend = "build"
test-requires = ["pytest", "numpy", "astropy"]
# The bundled library is import-time loaded; run the suite against the installed wheel.
test-command = "pytest {project}/bindings/python/tests -q"

# Linux wheels build inside a manylinux container, so fetch a pinned Zig 0.16 into it and put
# it on PATH for hatch_build.py's system-`zig` fallback. macOS/Windows build on the host where
# the workflow installs Zig directly.
[tool.cibuildwheel.linux]
before-all = "bash {project}/bindings/python/ci/install_zig.sh"
environment = { PATH = "/opt/zig:$PATH" }
