# The shared library is compiled by `hatch_build.py`. It prefers the `ziglang` build package
# when it provides Zig >= 0.16, and otherwise a system `zig` 0.16 on PATH (what CI installs).
# `ziglang` is intentionally NOT a hard build requirement because its PyPI releases can lag the
# 0.16 toolchain this project targets.
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "zigfitsio"
version = "0.1.1"
description = "Python bindings for zigfitsio — a pure-Zig FITS 4.0 I/O library"
readme = "bindings/python/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zigfitsio contributors" }]
keywords = ["FITS", "astronomy", "astrophysics", "io", "zig", "cfitsio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7", "astropy>=5"]

[project.urls]
Repository = "https://github.com/anhydrous99/zigfitsio"

# ── Wheel: ship the src-layout package (remapped to top-level `zigfitsio`) plus the Zig-built
#    shared library injected by hatch_build.py. ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
only-include = ["bindings/python/src/zigfitsio"]
sources = ["bindings/python/src"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# ── Sdist: carry the full Zig project so the wheel can be built from source. ─────────────────
[tool.hatch.build.targets.sdist]
include = [
    "bindings/**",
    "src/**",
    "tools/**",
    "test/**",
    "build.zig",
    "build.zig.zon",
    "hatch_build.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["bindings/python/tests"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
# 32-bit targets are skipped: hatch_build.py compiles the C-ABI library for the 64-bit host,
# so a win32/i686 wheel would bundle a 64-bit binary and fail to load ([WinError 193]).
skip = "*-musllinux_i686 *_i686 *-win32 pp*"
build-frontend = "build"
test-requires = ["pytest", "numpy", "astropy"]
# The bundled library is import-time loaded; run the suite against the installed wheel.
test-command = "pytest {project}/bindings/python/tests -q"
# Two lanes skip only their in-CI test (the wheel is still built and shipped in both):
#   • *-musllinux_aarch64 — astropy ships no musllinux/aarch64 wheel for some built CPythons, so
#     the test-deps install source-builds astropy there, which fails to compile under the
#     musllinux_1_2 image's GCC 14 (-Wincompatible-pointer-types is now an error). The same-arch
#     manylinux_aarch64 wheel — identical Zig binary + bindings — is fully tested.
#   • cp314t-* (free-threaded 3.14) — astropy has no guaranteed free-threaded wheel yet, so its
#     install would source-build and can fail. Drop this once numpy + astropy publish cp314t
#     wheels for the built platforms, to actually exercise the ctypes binding under no-GIL.
test-skip = "*-musllinux_aarch64 cp314t-*"

# Linux wheels build inside a manylinux container, so fetch a pinned Zig 0.16 into it and put
# it on PATH for hatch_build.py's system-`zig` fallback. macOS/Windows build on the host where
# the workflow installs Zig directly.
[tool.cibuildwheel.linux]
before-all = "bash {project}/bindings/python/ci/install_zig.sh"
environment = { PATH = "/opt/zig:$PATH" }

# Pin the macOS deployment target so the wheel's platform tag and the Zig-built dylib's minimum
# OS version agree (hatch_build.py reads MACOSX_DEPLOYMENT_TARGET); otherwise delocate rejects a
# dylib whose minos is the runner's host version against a lower wheel tag.
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
